package vn.demo.nike.features.order.enums;

public enum OrderStatus {
    PENDING_PAYMENT,
    PAID,
    PAYMENT_FAILED,
    PROCESSING,
    SHIPPING,
    DELIVERED,
    CANCELLED
}
