package vn.demo.nike.features.payment.enums;

public enum PaymentProvider {
    VNPAY
}
