package vn.demo.nike.infras.payment.vnpay.enums;

public enum PaymentStatus {
    INIT,
    PENDING,
    SUCCESS,
    FAILED,
    CANCELLED,
    EXPIRED
}
